Adicionado tela de login

--- a/WebContent/cliente.xhtml
+++ b/WebContent/cliente.xhtml
@@ -38,7 +38,7 @@
 			<p:graphicImage name="/images/loading.gif" />
 		</p:dialog>
 
-		<!-- h:form>
+		<h:form>
 			<p:growl id="growl" globalOnly="false" />
 			<p:panel id="panel">
 				<f:facet name="header">
@@ -137,6 +137,6 @@
 				</p:dataTable>
 			</p:dialog>
 
-		</h:form-->
+		</h:form>
 	</ui:define>
 </ui:composition>
