--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -22,7 +22,7 @@
 		<div>
 			<p:outputLabel value="Email" />
 			<br />
-			<p:inputText value="#{loginController.user}" />
+			<p:inputText value="#{loginController.email}" />
 		</div>
 		<div>
 			<p:outputLabel value="Senha" />
