--- a/WebContent/fornecedor.xhtml
+++ b/WebContent/fornecedor.xhtml
@@ -38,12 +38,12 @@
 			<p:graphicImage name="/images/loading.gif" />
 		</p:dialog>
 
-		<h:form id="form">
+		<h:form>
 			<p:growl id="growl" globalOnly="false" />
 			<p:panel id="panel">
 				<f:facet name="header">
 					<div align="center">
-						<h1>Cadastro de Cliente</h1>
+						<h1>Cadastro de Fornecedores</h1>
 					</div>
 				</f:facet>
 				<div class="ui-g ui-fluid">
@@ -54,42 +54,40 @@
 								<p:commandLink value="Nome: " onclick="PF('list').show();">
 									<p:message for="itName" escape="false" />
 								</p:commandLink>
-								<p:inputText id="itName" value="#{clientController.entity.name}"
-									required="true" requiredMessage="Informe o nome." />
+								<p:inputText id="itName"
+									value="#{providerController.entity.name}" required="true"
+									requiredMessage="Informe o nome." />
 
-								<p:outputLabel value="Cpf: ">
-									<p:message for="itCpf" escape="false" />
+								<p:outputLabel value="Cnpj: ">
+									<p:message for="itCnpj" escape="false" />
 								</p:outputLabel>
-								<p:inputMask id="itCpf" value="#{clientController.entity.cpf}"
-									mask="999.999.999-99" />
+								<p:inputMask id="itCnpj" value="#{providerController.entity.cnpj}"
+									mask="99.999.999/9999-99" />
 
-								<p:outputLabel value="Data de Nascimento: " />
-								<p:calendar value="#{clientController.entity.birthDate}"
-									pattern="dd/MM/yyyy" mask="99/99/9999" locale="pt_BR" />
-
-								<p:outputLabel value="Sexo: " />
-								<p:selectOneMenu id="slbSex"
-									value="#{clientController.entity.sex}" size="1">
+								<p:outputLabel value="Situação: " />
+								<p:selectOneMenu id="slbSituation"
+									value="#{providerController.entity.situation}" size="1">
 									<f:selectItem itemLabel="Selecione ..." itemValue=""
 										noSelectionOption="true" />
-									<f:selectItems value="#{clientController.listSex}" var="sex"
-										itemLabel="#{sex.label}" itemValue="#{sex}" />
+									<f:selectItems value="#{providerController.listSituation}"
+										var="situation" itemLabel="#{situation.label}"
+										itemValue="#{situation}" />
 								</p:selectOneMenu>
 
 								<div>
-									<h:outputText value="Cliente acessará o sistema?" />
+									<h:outputText value="Fornecedor acessará o sistema?" />
 									<p:toggleSwitch id="tsUser"
-										value="false">
+										value="#{providerController.userCreation}">
 										<p:ajax update="@form" />
 									</p:toggleSwitch>
 								</div>
 								<p:outputLabel value="Email: "
-									rendered="tsUser">
+									rendered="#{providerController.userCreation}">
 									<p:message for="itEmail" escape="false" />
 								</p:outputLabel>
 								<p:inputText id="itEmail"
-									rendered="false" immediate="true"
-									value="#{clientController.entity.user.email}" />
+									rendered="#{providerController.userCreation}"
+									value="#{providerController.entity.user.email}" />
 							</p:panelGrid>
 
 						</div>
@@ -98,10 +96,10 @@
 				<p:toolbar>
 					<f:facet name="left">
 						<p:commandButton value="Salvar" icon="pi pi-check" process="@form"
-							update="@form" action="#{clientController.save}" />
+							update="@form" action="#{providerController.save}" />
 
 						<p:commandButton value="Limpar" process="@this" update="panel"
-							action="#{clientController.clear}">
+							action="#{providerController.clear}">
 							<p:ajax update="@form" resetValues="true" />
 						</p:commandButton>
 
@@ -110,7 +108,7 @@
 					<f:facet name="right">
 						<p:commandButton value="Excluir" icon="pi pi-trash"
 							process="@form" update="panel"
-							action="#{clientController.delete}">
+							action="#{providerController.delete}">
 							<p:confirm header="Confirmação" message="Confirma a exclusão?" />
 						</p:commandButton>
 					</f:facet>
@@ -124,32 +122,28 @@
 					styleClass="ui-confirmdialog-no" />
 			</p:confirmDialog>
 
-			<p:dialog header="Listagem de Clientes" widgetVar="list" height="300"
-				width="90%" modal="true" resizable="true">
+			<p:dialog header="Listagem de Fornecedores" widgetVar="list"
+				height="300" width="90%" modal="true" resizable="true">
 				<p:outputLabel value="Nome: " />
-				<p:inputText id="itSearch" value="#{clientController.search}" />
+				<p:inputText id="itSearch" value="#{providerController.search}" />
 				<p:commandButton value="Pesquisar"
-					actionListener="#{clientController.search}"
+					actionListener="#{providerController.search}"
 					process="@this itSearch" update="dtList" />
 				<br />
 				<p:dataTable id="dtList" var="entity"
-					value="#{clientController.listClient}">
+					value="#{providerController.listProvider}">
 					<p:column headerText="Nome">
 						<p:commandLink value="#{entity.name}"
-							actionListener="#{clientController.edit(entity.id)}"
+							actionListener="#{providerController.edit(entity.id)}"
 							process="@this" update="@form" resetValues="true" />
 					</p:column>
 
-					<p:column headerText="Cpf">
-						<h:outputText value="#{entity.cpf}" />
+					<p:column headerText="Cnpj">
+						<h:outputText value="#{entity.cnpj}" />
 					</p:column>
 
-					<p:column headerText="Data de Nascimento">
-						<h:outputLabel value="#{entity.birthDate}" />
-					</p:column>
-
-					<p:column headerText="Sexo">
-						<h:outputLabel value="#{entity.sex}" />
+					<p:column headerText="Situação">
+						<h:outputLabel value="#{entity.situation}" />
 					</p:column>
 				</p:dataTable>
 			</p:dialog>
