Controller de venda adicionado

--- a/WebContent/estoque.xhtml
+++ b/WebContent/estoque.xhtml
@@ -97,7 +97,7 @@
 
 					<f:facet name="right">
 						<p:commandButton value="Excluir" icon="pi pi-trash"
-							process="@form" update="panel"
+							process="@form" update="@form"
 							action="#{itemStockController.delete}">
 							<p:confirm header="Confirmação" message="Confirma a exclusão?" />
 						</p:commandButton>
