--- a/WebContent/fornecedor.xhtml
+++ b/WebContent/fornecedor.xhtml
@@ -107,7 +107,7 @@
 
 					<f:facet name="right">
 						<p:commandButton value="Excluir" icon="pi pi-trash"
-							process="@form" update="panel"
+							process="@form" update="@form"
 							action="#{providerController.delete}">
 							<p:confirm header="Confirmação" message="Confirma a exclusão?" />
 						</p:commandButton>
