--- a/WebContent/produto.xhtml
+++ b/WebContent/produto.xhtml
@@ -108,7 +108,7 @@
 
 					<f:facet name="right">
 						<p:commandButton value="Excluir" icon="pi pi-trash"
-							process="@form" update="panel"
+							process="@form" update="@form"
 							action="#{productController.delete}">
 							<p:confirm header="Confirmação" message="Confirma a exclusão?" />
 						</p:commandButton>
