--- a/WebContent/usuario.xhtml
+++ b/WebContent/usuario.xhtml
@@ -38,12 +38,12 @@
 			<p:graphicImage name="/images/loading.gif" />
 		</p:dialog>
 
-		<h:form>
+		<h:form id="form">
 			<p:growl id="growl" globalOnly="false" />
 			<p:panel id="panel">
 				<f:facet name="header">
 					<div align="center">
-						<h1>Cadastro de Fornecedores</h1>
+						<h1>Cadastro de Usuário</h1>
 					</div>
 				</f:facet>
 				<div class="ui-g ui-fluid">
@@ -51,43 +51,24 @@
 						<div class="card card-w-title">
 							<p:panelGrid columns="1"
 								styleClass="form-group ui-panelgrid-blank" layout="grid">
-								<p:commandLink value="Nome: " onclick="PF('list').show();">
-									<p:message for="itName" escape="false" />
+								<p:commandLink value="Email: " onclick="PF('list').show();">
+									<p:message for="itEmail" escape="false" />
 								</p:commandLink>
-								<p:inputText id="itName"
-									value="#{providerController.entity.name}" required="true"
-									requiredMessage="Informe o nome." />
+								<p:inputText id="itEmail" value="#{userController.entity.email}"
+									required="true" requiredMessage="Informe o email." />
 
-								<p:outputLabel value="Cnpj: ">
-									<p:message for="itCnpj" escape="false" />
-								</p:outputLabel>
-								<p:inputMask id="itCnpj" value="#{providerController.entity.cnpj}"
-									mask="99.999.999/9999-99" />
+								<p:outputLabel value="Data de Cadastro: " />
+								<p:calendar value="#{userController.entity.creationDate}"
+									pattern="dd/MM/yyyy" mask="99/99/9999" locale="pt_BR" />
 
-								<p:outputLabel value="Situação: " />
-								<p:selectOneMenu id="slbSituation"
-									value="#{providerController.entity.situation}" size="1">
+								<p:outputLabel value="Perfil: " />
+								<p:selectOneMenu id="slbProfile"
+									value="#{userController.entity.profile}" size="1">
 									<f:selectItem itemLabel="Selecione ..." itemValue=""
 										noSelectionOption="true" />
-									<f:selectItems value="#{providerController.listSituation}"
-										var="situation" itemLabel="#{situation.label}"
-										itemValue="#{situation}" />
+									<f:selectItems value="#{userController.listProfile}" var="profile"
+										itemLabel="#{profile.label}" itemValue="#{profile}" />
 								</p:selectOneMenu>
-
-								<div>
-									<h:outputText value="Fornecedor acessará o sistema?" />
-									<p:toggleSwitch id="tsUser" 
-										value="#{providerController.userCreation}" disabled="#{providerController.disableToggle()}">
-										<p:ajax process="#{providerController.renderEmail()}" update="@form" />
-									</p:toggleSwitch>
-								</div>
-								<p:outputLabel for="itEmail" value="Email: "
-									rendered="#{!providerController.userCreation}">
-									<p:message for="itEmail" escape="false" />
-								</p:outputLabel>
-								<p:inputText id="itEmail"
-									rendered="#{!providerController.userCreation}" immediate="true"
-									value="#{providerController.entity.user.email}" />
 							</p:panelGrid>
 
 						</div>
@@ -96,10 +77,10 @@
 				<p:toolbar>
 					<f:facet name="left">
 						<p:commandButton value="Salvar" icon="pi pi-check" process="@form"
-							update="@form" action="#{providerController.save}" />
+							update="@form" action="#{userController.save}" />
 
 						<p:commandButton value="Limpar" process="@this" update="panel"
-							action="#{providerController.clear}">
+							action="#{userController.clear}">
 							<p:ajax update="@form" resetValues="true" />
 						</p:commandButton>
 
@@ -108,7 +89,7 @@
 					<f:facet name="right">
 						<p:commandButton value="Excluir" icon="pi pi-trash"
 							process="@form" update="@form"
-							action="#{providerController.delete}">
+							action="#{userController.delete}">
 							<p:confirm header="Confirmação" message="Confirma a exclusão?" />
 						</p:commandButton>
 					</f:facet>
@@ -122,28 +103,28 @@
 					styleClass="ui-confirmdialog-no" />
 			</p:confirmDialog>
 
-			<p:dialog header="Listagem de Fornecedores" widgetVar="list"
-				height="300" width="90%" modal="true" resizable="true">
-				<p:outputLabel value="Nome: " />
-				<p:inputText id="itSearch" value="#{providerController.search}" />
+			<p:dialog header="Listagem de Usuário" widgetVar="list" height="300"
+				width="90%" modal="true" resizable="true">
+				<p:outputLabel value="Email: " />
+				<p:inputText id="itSearch" value="#{userController.search}" />
 				<p:commandButton value="Pesquisar"
-					actionListener="#{providerController.search}"
+					actionListener="#{userController.search}"
 					process="@this itSearch" update="dtList" />
 				<br />
 				<p:dataTable id="dtList" var="entity"
-					value="#{providerController.listProvider}">
-					<p:column headerText="Nome">
-						<p:commandLink value="#{entity.name}"
-							actionListener="#{providerController.edit(entity.id)}"
+					value="#{userController.listUser}">
+					<p:column headerText="Email">
+						<p:commandLink value="#{entity.email}"
+							actionListener="#{userController.edit(entity.id)}"
 							process="@this" update="@form" resetValues="true" />
 					</p:column>
 
-					<p:column headerText="Cnpj">
-						<h:outputText value="#{entity.cnpj}" />
+					<p:column headerText="Data de Cadastro">
+						<h:outputLabel value="#{entity.creationDate}" />
 					</p:column>
 
-					<p:column headerText="Situação">
-						<h:outputLabel value="#{entity.situation}" />
+					<p:column headerText="Perfil">
+						<h:outputLabel value="#{entity.profile}" />
 					</p:column>
 				</p:dataTable>
 			</p:dialog>
